scss/boost_union/post.scss
/* ... */
/*---------------------------------------
 * Settings: Additional block regions - The outside-left and outside-right regions.
 --------------------------------------*/

/* On larger screens. */
@include media-breakpoint-up(md) {
    /* On Moodle pages with limited width (currently: The course main pages, the frontpage and the dashboard).
       Remember: Only on these pages, we offer the outside-left and outside-right region.
       We do not need to handle the full-width pages here. */
    body.limitedwidth {
        /* If we have a outside-left and / or a outside-right block region. */
        .main-inner-outside-left-right,
        .main-inner-outside-left,
        .main-inner-outside-right {
            /* Center the main region content to keep the page content in the middle of the page. */
            text-align: center;

            /* Change the block regions to show them properly as block columns. */
            #theme-block-region-outside-left,
            #theme-block-region-outside-right,
            .main-inner {
                /* Undo the text-align for the regions in each column to still show the content correctly. */
                text-align: initial;

                /* Display them as inline-block. */
                display: inline-block;

                /* And make sure that the columns are at the top of the page at all. */
                vertical-align: top;
            }
        }

        /* On pages where only the outside-left region is enabled:
           Reduce the size of the main column to make space for the outside-left column. */
        .main-inner-outside-left .main-inner {
            width: calc(98% - #{$blockregionoutsideleftwidth});
        }

        /* On pages where only the outside-right region is enabled:
           Reduce the size of the main column to make space for the outside-right column. */
        .main-inner-outside-right .main-inner {
            width: calc(98% - #{$blockregionoutsiderightwidth});
        }

        /* On pages where the outside-left and the outside-right region are enabled:
           Reduce the size of the main column to make space for the outside-left and outside-right columns. */
        .main-inner-outside-left-right .main-inner {
            width: calc(98% - #{$blockregionoutsiderightwidth} - #{$blockregionoutsideleftwidth});
        }

        /* Set the width and margin of the outside-left region. */
        #theme-block-region-outside-left {
            margin-right: 1rem;
            margin-top: 1.5rem;
            width: $blockregionoutsideleftwidth;
        }

        /* Set the width of the outside-right region. */
        #theme-block-region-outside-right {
            margin-left: 1rem;
            margin-top: 1.5rem;
            width: $blockregionoutsiderightwidth;
        }

        /* If the admin configured outside blocks to be shown next to the main content. */
        .main-inner-outside-nextmaincontent {
            #theme-block-region-outside-left,
            #theme-block-region-outside-right {
                /* Disable float (just to be sure). */
                float: none;
            }
        }

        /* If the admin configured outside blocks to be shown next to the main content. */
        .main-inner-outside-nearwindowedges {
            /* Float the outside-left block region to the left. */
            #theme-block-region-outside-left {
                float: left;
            }

            /* Float the outside-right block region to the right. */
            #theme-block-region-outside-right {
                float: right;
            }

            /* Clear the outside-bottom + footer regions so that they are shown correctly after the floated regions. */
            #theme-block-region-outside-bottom,
            #theme-block-region-footer {
                clear: both;
            }
        }
    }
}

/* And on smaller screens. */
@include media-breakpoint-down(sm) {
    /* Change the outside-left and outside-right blocks to full width (with some horizontal space). */
    #theme-block-region-outside-left,
    #theme-block-region-outside-right {
        padding-left: 15px;
        padding-right: 15px;
        width: 100%;
    }
    /* And remove their floating. */
    .main-inner-outside-nearwindowedges {
        #theme-block-region-outside-left,
        #theme-block-region-outside-right {
            float: none;
        }
    }
}
/* ... */

